--- a/316proj2/FamilyTree/bin/.gitignore
+++ b/316proj2/FamilyTree/bin/.gitignore
@@ -4,6 +4,8 @@
 /MyTree.class
 /MyTreeTest.class
 /Tnode.class
-/buildTree.class
 /proj2.class
 /proj2test.class
+/small-output.txt
+/small-input.txt
+/small-input2.txt
